# pharos

./: .gitignore  LICENSE.txt  README.md  pharos_whitepaper.txt
.github/workflows/: test.yml
src/c/pam_lavalamp/: Makefile  pam_lavalamp.c
src/lean4/: DecouplingBackboneMirror.lean  Membrane.lean  TriadBackboneMirror.lean  lake-manifest.json  lakefile.lean
src/macos/: LavaLampMechanism.m  Makefile  README.md
src/macos/LavaLampMechanism.bundle/Contents/: Info.plist
src/windows/lavalamp_credprov/: CMakeLists.txt  Guid.h  LavaLampCredentialProvider.def  LavaLampCredentialProviderFilter.cpp  LavaLampCredentialProviderFilter.h  LavaLampIPC.cpp  LavaLampIPC.h  README.md  dllmain.cpp  vcpkg.json
test/: mock_lavalamp_daemon.py  test_pam_lavalamp.sh
